--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,19 @@ dependencies:
   json_annotation: ^4.8.1
   freezed_annotation: ^2.2.0
   lottie: ^2.3.2
+  fluttertoast: ^8.2.2
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+#  flutter_launcher_icons: ^0.13.1
+
+#flutter_icons:
+#  android: "launcher_icon"
+#  ios: true
+#  image_path: "assets/images/logo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
