--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,8 @@ dependencies:
   freezed_annotation: ^2.2.0
   lottie: ^2.3.2
   fluttertoast: ^8.2.2
-
+  firebase_core: ^2.13.0
+  firebase_auth: ^4.6.1
 
 dev_dependencies:
   flutter_test:
