--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   fluttertoast: ^8.2.2
   firebase_core: ^2.13.0
   firebase_auth: ^4.6.1
+  calendar_view: ^1.0.3
 
 dev_dependencies:
   flutter_test:
