#24 basic earnings chart added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   firebase_auth: ^4.6.1
   calendar_view: ^1.0.3
   modal_bottom_sheet: ^3.0.0-pre
+  fl_chart: ^0.63.0
+
 
 dev_dependencies:
   flutter_test:
