--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   calendar_view: ^1.0.3
   modal_bottom_sheet: ^3.0.0-pre
   fl_chart: ^0.63.0
+  firebase_storage: ^11.2.3
+  cloud_firestore: ^4.8.1
+  loading_overlay: ^0.3.0
 
 
 dev_dependencies:
@@ -65,6 +68,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/lottie/
   fonts:
     - family: Lato
       fonts:
