--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_storage: ^11.2.3
   cloud_firestore: ^4.8.1
   loading_overlay: ^0.3.0
+  uuid: ^3.0.7
 
 
 dev_dependencies:
