--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>129179530930-24tc6t8ida6mj3dem7i88od2gs0u4btc.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.129179530930-24tc6t8ida6mj3dem7i88od2gs0u4btc</string>
 	<key>API_KEY</key>
 	<string>AIzaSyCZe4mkZwDuA6oP7kKrSbpMFLNWjVO_JuY</string>
 	<key>GCM_SENDER_ID</key>
