--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   loading_overlay: ^0.3.0
   uuid: ^3.0.7
   intl: ^0.18.1
-
+  google_sign_in: ^6.1.4
 
 dev_dependencies:
   flutter_test:
