--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,8 @@ dependencies:
   uuid: ^3.0.7
   intl: ^0.18.1
   google_sign_in: ^6.1.4
-  cupertino_date_textbox: ^1.0.3
+  faker_dart: ^0.2.0
+  simple_circular_progress_bar: ^1.0.2
 
 dev_dependencies:
   flutter_test:
