#54 notification setup + schedule notification on add

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   intl: ^0.18.1
   google_sign_in: ^6.1.4
   simple_circular_progress_bar: ^1.0.2
+  flutter_local_notifications: ^15.1.0+1
+  timezone: ^0.9.2
+  flutter_native_timezone: ^2.0.0
 
 dev_dependencies:
   flutter_test:
