--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   flutter_local_notifications: ^15.1.0+1
   timezone: ^0.9.2
   flutter_native_timezone: ^2.0.0
+  local_auth: ^2.1.6
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
